--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="insertar">Insertar</string>
     <string name="guardar">Guardar</string>
     <string name="sin_infomacion">No existen personas registradas en el sistema</string>
+    <string name="confirm">Confirmar</string>
+    <string name="confirm_message_guardar_informacion">¿Está seguro de guardar la información?</string>
+    <string name="confirm_action">Aceptar</string>
+    <string name="cancelar">Cancelar</string>
 </resources>
