--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="sin_infomacion">No existen personas registradas en el sistema</string>
     <string name="confirm">Confirmar</string>
     <string name="confirm_message_guardar_informacion">¿Está seguro de guardar la información?</string>
+    <string name="confirm_message_eliminar_informacion">¿Está seguro que desea eliminar el registro?</string>
     <string name="confirm_action">Aceptar</string>
     <string name="cancelar">Cancelar</string>
 </resources>
